1. Added char length limit to Editor.jsx; 2. Fixed Pagination logic and added page number indicator; 3. Renamed some endpoints to fit REST API standards

--- a/tweetigel-frontend/style/style.css
+++ b/tweetigel-frontend/style/style.css
@@ -9,6 +9,13 @@
     transition: box-shadow var(--pico-transition);
 }
 
+kbd {
+    align-content: center;
+    background-color: var(--pico-background-color);
+    color: var(--pico-primary);
+    padding-left: 2%;
+}
+
 nav > ul > div {
     display: flex;
 }
